* Improved errorhandeling in themecompiling. [Boy]
* Made it possible to use 'scan dir1/dir2;dir1/dir3' without wrapping the
  directories in single quotes. [Boy]
* Made themecomiler use moduleDir() instead of figuring out the directory 
  structure itsself, making it possible to use theme elements from outside
  the ATK application root. [Boy]
* Fixed php errors in atkProfileAttribute. [Ivo]

Changes in ATK 5.3RC1
---------------------
+ Added support for the atkMetaNode to the Oracle (OCI) driver. [Peter]
+ Added support for default values to the atkMetaNode (only numerics and
  strings at this time and only on PostgreSQL and Oracle). [Peter]
+ Added relation support to the atkMetaPolicy (supports one-to-one,
  one-to-many and many-to-one relations). [Peter]
+ Added get/setDescriptorTemplate methods to atkNode and atkRelation. [Peter]
+ Added get/setDestinationFilter methods to atkRelation. [Peter]
+ Added getInstance() for the atkMlSplitter class. [Martin]
+ Added nodeExists method to atkModule. At this time only used by
  atkMetaPolicy relation support. [Peter]
+ Added atkMetaTools class which contains methods to singularize or pluralize
  English strings (e.g. dogs => dog, dog => dogs etc.). [Peter]
+ Added AF_ONETOMANY_EMBED, this causes the add to be embedded in the current
  node, instead of displaying it on a seperate screen. [Boy]
+ Added $config_javascript_confirmation, setting this to true will make ATK
  use javascript for the confirmation dialogue when deleting. [Boy]
+ Added NF_CACHE_RECORDLIST which makes ATK cache all the recordlists. [Boy]
+ Added $format parameter to func_datetochar. [Ivo]
+ Added vendorDateFormat method to abstraction layer for database specific
  date formatting strings. [Ivo]
+ Added atkLiveTextPreview attribute to preview html content of atkAttributes
  and atkTextAttributes in realtime. [Ivo]
+ Made it possible to pass size to atkFileWriterAttribute. [Boy]